test/ui/tests/lowering/named-arguments-unsupported.stderr
error: named arguments not supported yet
 --> ${TEST_FOLDER}/lowering/named-arguments-unsupported.lushui:3:21
  |
3 | receiver: Receiver (A = Type) = engender (material = X)
  |                     ^ 
  |

error: named arguments not supported yet
 --> ${TEST_FOLDER}/lowering/named-arguments-unsupported.lushui:3:43
  |
3 | receiver: Receiver (A = Type) = engender (material = X)
  |                                           ^^^^^^^^ 
  |

error: named arguments not supported yet
 --> ${TEST_FOLDER}/lowering/named-arguments-unsupported.lushui:7:14
  |
7 |         Tag (named = thing) => void
  |              ^^^^^ 
  |

error: aborting due to 3 previous errors

